--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "debug": "cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true NODE_ENV=development DEBUG=tass:* nodemon --watch src -L -e js,yaml,ts --exec 'node --inspect -r dotenv/config -r ts-node/register src/index.ts'"
+    "debug": "cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true NODE_ENV=development DEBUG=tass:* nodemon --watch src -L -e js,yaml,ts --exec 'node --inspect -r dotenv/config -r ts-node/register src/index.ts'",
+    "build": "rimraf ./dist && tsc --project tsconfig.database.json",
+    "seed:dev": "npm run build && \"./node_modules/.bin/sequelize\" db:seed:all --config \"./dist/config/database.js\" --seeders-path \"./dist/src/db/seeders/development\""
   },
   "keywords": [],
   "author": "",
