--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "colors": "1.4.0",
     "config": "3.3.7",
+    "convert-csv-to-json": "^1.3.3",
     "cross-env": "7.0.3",
     "debug": "4.3.4",
     "dotenv": "16.0.2",
     "express": "4.18.1",
+    "extract-zip": "^2.0.1",
     "joi": "17.6.0",
     "lodash": "4.17.21",
     "nodemon": "2.0.19",
+    "parse-srt": "^1.0.0-alpha",
     "pg": "8.7.3",
     "rimraf": "^3.0.2",
     "sequelize": "6.21.4",
