--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "debug": "cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true NODE_ENV=development DEBUG=tass:* nodemon --watch src -L -e js,yaml,ts --exec 'node --inspect -r dotenv/config -r ts-node/register src/index.ts'",
     "build": "rimraf ./distDatabase && tsc --project tsconfig.database.json",
-    "seed": "npm run build && \"./node_modules/.bin/sequelize\" db:seed:all --config \"./distDatabase/config/database.js\" --seeders-path \"./distDatabase/src/db/seeders/\" && rm -r ./distDatabase"
+    "seed": "npm run build && \"./node_modules/.bin/sequelize\" db:seed:all --config \"./distDatabase/config/database.js\" --seeders-path \"./distDatabase/src/db/seeders/\""
   },
   "keywords": [],
   "author": "",
